Bug 171133 - Lost group field from Pivot table after ooxml export
Summary: Lost group field from Pivot table after ooxml export
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
26.8.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.8.0
Keywords:
Depends on:
Blocks: Pivot-Table-XLSX
  Show dependency treegraph
 
Reported: 2026-03-04 07:48 UTC by Balázs Varga
Modified: 2026-04-15 13:46 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file to save (14.82 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2026-03-04 07:48 UTC, Balázs Varga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Balázs Varga 2026-03-04 07:48:25 UTC
Description:
After we export a pivot table with discrete (non-date) group fields the group field will be lost

Steps to Reproduce:
1.Open example document (groupspivot.xlsx) in LibreOffice Calc.
2.See we have two groups (Group 1, Group 2) in the A column.
3.Right click inside Pivot Table --> Properies --> Available Fields and Row Fields have "a2".
4.Close the dialog, save or (save as) the file to xlsx and reload
5. Check what we have checked in step 2. and 3.

Actual Results:
Group field a2 and groups, Group 1 and Group 2 are lost.

Expected Results:
Group field a2 and groups, Group 1 and Group 2 should not be lost.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: 680(Build:0)
CPU threads: 20; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Raster; VCL: win
Locale: de-DE (hu_HU); UI: en-US
Calc: CL threaded
Comment 1 Balázs Varga 2026-03-04 07:48:48 UTC
Created attachment 205916 [details]
Example file to save
Comment 2 Commit Notification 2026-03-13 07:07:17 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/02ad6e2b905cff875ad12416adea9061b5b26f63

tdf#171133: sc OOXML export fix discrete group fields

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2026-04-15 13:46:45 UTC
Karthik Godha committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/343601b11f3fedb4e0b47ca88a4daa37b4aa9b6c

tdf#171133: PivotTable grouping with string numbers

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2026-04-15 13:46:48 UTC
Karthik Godha committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5a53c874fa6431cc07b20bbfd0c84579d0e0b77b

tdf#171133: Discrete grouping of dates

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.