tdf#171133: sc OOXML export fix discrete group fields

Discrete (non-date) group fields were not properly exported to OOXML,
and we lost the grouping items/fields, (and any calculated fields)
after we saved to xlsx.

- Write <fieldGroup base="N">, <discretePr>, and <groupItems> for
  discrete group cacheFields (previously only date groups were handled
  by the WriteFieldGroup lambda).
- Write <fieldGroup par="N"/> on base source fields to link them to
  their parent group cacheField.
- Write proper pivotField items for discrete group fields using
  GetGroupDimMemberIds + GetItemDataById (SortGroupItems only handles
  date groups with GroupValue type items).

Change-Id: Ia6f5e149b555e0367479934bcdd3b9609b7918c4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/200897
Tested-by: Jenkins
Reviewed-by: Balazs Varga <balazs.varga@collabora.com>